--- a/www/index.html
+++ b/www/index.html
@@ -103,7 +103,7 @@
             </div>
 
             <div class="panel" data-title="Settings" id="tab3">
-            	<textarea class="form-control" style="width: 100%; height: 200px;" id="mode_debug_txt"></textarea>
+            	<!--<textarea class="form-control" style="width: 100%; height: 200px;" id="mode_debug_txt"></textarea>-->
                 <div class="form-group adminpin" style="margin-top: 15px;">
                     <label>Admin PIN:</label>
                     <div class="input-group">
